--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "realrashid/sweet-alert": "^7.3",
+        "sweetalert2/laravel": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
